fix: 修改z-index的问题

--- a/src/dat/gui/_structure.scss
+++ b/src/dat/gui/_structure.scss
@@ -21,7 +21,7 @@ $button-height: 20px;
     left: 0;
     right: 0;
     height: 0;
-    z-index: 0;
+    z-index: 9999;
   }
 
   &:not(.ac) .main {
